# utube_playlist_mp3_downloader

./: .gitignore  README.md  README.rst  _internal.py  dmp3.bat  dmp3.py  pyproject.toml  tox.ini
docs/source/: conf.py
src/dmp3/: __init__.py  _internal.py  dmp3.py
tests/: conftest.py  test_cli.py  test_direct.py  test_wsl.py
